--- a/WeCanHelp/GraphExplorerMVC/GraphExplorerMVC.csproj
+++ b/WeCanHelp/GraphExplorerMVC/GraphExplorerMVC.csproj
@@ -179,6 +179,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510230726341_Initial.cs" />
+    <Compile Include="Migrations\201510230726341_Initial.Designer.cs">
+      <DependentUpon>201510230726341_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdalTokenCache.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\FileModel.cs" />
@@ -241,6 +246,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510230726341_Initial.resx">
+      <DependentUpon>201510230726341_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
