--- a/WeCanHelp/GraphExplorerMVC/Web.Release.config
+++ b/WeCanHelp/GraphExplorerMVC/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DefaultConnection"
+      connectionString="Server=tcp:wecanhelp.database.windows.net,1433;Database=WchDb;User ID=dbadmin@wecanhelp;Password=w3c4nH3LP;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
