--- a/WeCanHelp/GraphExplorerMVC/packages.config
+++ b/WeCanHelp/GraphExplorerMVC/packages.config
@@ -8,11 +8,16 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.3.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.0.2" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Edm" version="5.6.3" targetFramework="net452" />
-  <package id="Microsoft.Data.OData" version="5.6.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.3" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.14.201151115" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net452" />
@@ -29,6 +34,6 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
-  <package id="System.Spatial" version="5.6.3" targetFramework="net452" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
