added new data field on the asset type. modify it to be locally executable. updated migrations

--- a/WeCanHelp/GraphExplorerMVC/Web.config
+++ b/WeCanHelp/GraphExplorerMVC/Web.config
@@ -21,7 +21,7 @@
     <add key="ida:ClientSecret" value="90icDwdGZ7x32GdlM2hGe9vNCg4udyD0uJnpoX0T05s=" />
     <add key="ida:Domain" value="wecanhelphack.onmicrosoft.com" />
     <add key="ida:TenantId" value="ab568576-914f-4640-9924-edea4590d31b" />
-    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/" />
+    <add key="ida:PostLogoutRedirectUri" value="https://wecanhelphack.azurewebsites.net/logout" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
