--- a/WeCanHelp/GraphExplorerMVC/Web.config
+++ b/WeCanHelp/GraphExplorerMVC/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GraphExplorerMVC-20151022050444.mdf;Initial Catalog=aspnet-GraphExplorerMVC-20151022050444;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GraphExplorerMVC-20151022050444.mdf;Initial Catalog=aspnet-GraphExplorerMVC-20151022050444;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=tcp:wecanhelp.database.windows.net,1433;Database=WchDb;User ID=dbadmin@wecanhelp;Password=w3c4nH3LP;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
