--- a/WeCanHelp/GraphExplorerMVC/Web.config
+++ b/WeCanHelp/GraphExplorerMVC/Web.config
@@ -27,6 +27,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="RemoteOnly" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
