added proxy.html and cors

--- a/WeCanHelp/GraphExplorerMVC/GraphExplorerMVC.csproj
+++ b/WeCanHelp/GraphExplorerMVC/GraphExplorerMVC.csproj
@@ -226,6 +226,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="proxy.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\wecanhelphack %282%29.pubxml" />
